renamed the working file

--- a/WORKINGS.ipynb
+++ b/WORKINGS.ipynb
@@ -25,11 +25,13 @@
     }
    ],
    "source": [
+    "#for Stock P/E or Current P/E\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/POLYPLEX/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -79,12 +81,13 @@
     }
    ],
    "source": [
+    "# For Company Name\n",
+    "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/500790/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
-    "\n",
     "\n",
     "# Create a BeautifulSoup object\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
@@ -95,7 +98,7 @@
     "# Get the text content from the h1 element\n",
     "if h1_element:\n",
     "    company_name = h1_element.text\n",
-    "    print(company_name)  # Output: Polyplex Corporation Ltd\n",
+    "    print(company_name)\n",
     "else:\n",
     "    print(\"Element not found.\")"
    ]
@@ -115,11 +118,13 @@
     }
    ],
    "source": [
+    "# For NSE symbol\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/POLYPLEX/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -156,11 +161,13 @@
     }
    ],
    "source": [
+    "# For Market Cap\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/POLYPLEX/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -176,11 +183,11 @@
     "    # Initialize a variable to hold the number\n",
     "    number = None\n",
     "\n",
-    "    # Iterate through the li elements to find 'Stock P/E'\n",
+    "    # Iterate through the li elements to find 'Market Cap'\n",
     "    for li in li_elements:\n",
     "        name_element = li.find('span', class_='name')\n",
     "        if name_element and 'Market Cap' in name_element.text:\n",
-    "            # If 'Stock P/E' is found, get the corresponding number span\n",
+    "            # If 'Market Cap' is found, get the corresponding number span\n",
     "            number_element = li.find('span', class_='number')\n",
     "            if number_element:\n",
     "                number = number_element.text\n",
@@ -190,7 +197,7 @@
     "    if number:\n",
     "        print(number)  # This will print the number corresponding to 'Stock P/E'\n",
     "    else:\n",
-    "        print(\"Stock P/E not found.\")\n",
+    "        print(\"Market Cap not found.\")\n",
     "else:\n",
     "    print(f\"Failed to retrieve the page. Status code: {response.status_code}\")\n"
    ]
@@ -213,11 +220,13 @@
     }
    ],
    "source": [
+    "#for Net Profit+\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/POLYPLEX/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -252,91 +261,9 @@
     "        break\n",
     "\n",
     "# Get the 12th item from the 'Net Profit+' list (index 11)\n",
-    "twelfth_item = net_profit_list[11] if len(net_profit_list) > 11 else None\n",
-    "twelfth_item"
+    "Net_Profit = net_profit_list[11] if len(net_profit_list) > 11 else None\n",
+    "Net_Profit"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "a720adf2-2da3-4cbf-8d9b-46a0ea6da26c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Sales+', '7,135', '8,051', '8,468', '7,594', '6,130', '8,116', '10,073', '9,440', '10,457', '13,938', '16,911', '18,590', '19,562'], ['Expenses+', '6,461', '7,274', '7,713', '6,798', '5,315', '7,083', '8,885', '8,374', '8,868', '12,163', '15,290', '16,709', '17,550'], ['Operating Profit', '674', '777', '755', '796', '815', '1,033', '1,189', '1,067', '1,589', '1,775', '1,621', '1,881', '2,013'], ['OPM %', '9%', '10%', '9%', '10%', '13%', '13%', '12%', '11%', '15%', '13%', '10%', '10%', '10%'], ['Other Income+', '222', '35', '48', '949', '42', '97', '124', '107', '187', '159', '178', '249', '261'], ['Interest', '123', '102', '96', '91', '13', '25', '16', '51', '90', '67', '55', '84', '46'], ['Depreciation', '110', '116', '139', '134', '121', '140', '149', '218', '249', '261', '296', '338', '354'], ['Profit before tax', '664', '594', '569', '1,520', '723', '965', '1,147', '904', '1,438', '1,607', '1,447', '1,707', '1,874'], ['Tax %', '12%', '25%', '32%', '14%', '32%', '31%', '31%', '19%', '27%', '26%', '26%', '26%', ''], ['Net Profit+', '581', '446', '385', '1,300', '494', '661', '788', '735', '1,044', '1,196', '1,072', '1,271', '1,391'], ['EPS in Rs', '9.32', '7.15', '6.17', '20.82', '7.91', '10.60', '12.59', '11.75', '16.68', '19.10', '17.11', '20.28', '22.20'], ['Dividend Payout %', '16%', '42%', '49%', '29%', '44%', '4%', '36%', '34%', '39%', '39%', '44%', '44%', '']]\n",
-      "14\n",
-      "Twelfth item from Net Profit+ list: 1,271\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/havells/consolidated/'  # Replace with your actual URL\n",
-    "\n",
-    "# Fetch the HTML content from the URL\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "# Create a BeautifulSoup object\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "# Find all tables by their class name (this will give us all the tables with the class 'data-table')\n",
-    "tables = soup.find_all('table', class_='data-table')\n",
-    "\n",
-    "# Check if there are at least two tables\n",
-    "if len(tables) > 1:\n",
-    "    # Work with the second table\n",
-    "    table = tables[1]\n",
-    "\n",
-    "    # Initialize a list to store the extracted data\n",
-    "    data = []\n",
-    "\n",
-    "    # Iterate over each row in the table body (tbody)\n",
-    "    for row in table.tbody.find_all('tr'):\n",
-    "        # Extract all cells (td elements) in the row\n",
-    "        cells = row.find_all('td')\n",
-    "\n",
-    "        # Get the text content of each cell and strip any extra spaces\n",
-    "        row_data = [cell.get_text(strip=True) for cell in cells]\n",
-    "\n",
-    "        # Append the cleaned row data to the main data list\n",
-    "        data.append(row_data)\n",
-    "    print(data)\n",
-    "\n",
-    "    # Iterate through the data to find the list that starts with 'Net Profit+'\n",
-    "    net_profit_list = []\n",
-    "    for lst in data:\n",
-    "        if lst[0] == 'Net Profit+':\n",
-    "            net_profit_list = lst\n",
-    "            break\n",
-    "    print(len(net_profit_list))\n",
-    "    # Get the 12th item from the 'Net Profit+' list (index 11)\n",
-    "    twelfth_item = net_profit_list[12] if len(net_profit_list) > 12 else None\n",
-    "    print(f'Twelfth item from Net Profit+ list: {twelfth_item}')\n",
-    "else:\n",
-    "    print(\"Less than 2 tables found with the class 'data-table'.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "728a3745-1392-4fe6-b475-3d6a8b26d46a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c91996b2-6569-4aca-b90c-877f92ee083c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -353,11 +280,13 @@
     }
    ],
    "source": [
+    "#for 5yrs Median ROCE\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# Specify the URL\n",
-    "url = 'https://www.screener.in/company/havells/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -368,17 +297,17 @@
     "# Find all tables on the page\n",
     "tables = soup.find_all('table', class_='data-table responsive-text-nowrap')\n",
     "\n",
-    "table = tables[4]\n",
+    "roce_table = tables[4]\n",
     "# Find all rows in the table body (tbody)\n",
-    "rows = table.find('tbody').find_all('tr')\n",
+    "rows = roce_table.find('tbody').find_all('tr')\n",
     "\n",
     "# Extract the sixth row (index 5)\n",
-    "sixth_row = rows[5]\n",
+    "roce_row = rows[5]\n",
     "\n",
     "# Extract the sixth column (index 5) in that row\n",
-    "sixth_column_value = sixth_row.find_all('td')[6].text.strip()\n",
+    "roce = roce_row.find_all('td')[6].text.strip()\n",
     "\n",
-    "print(f\"The value in the sixth row and sixth column is: {sixth_column_value}\")\n"
+    "roce"
    ]
   },
   {
@@ -453,13 +382,14 @@
     }
    ],
    "source": [
+    "# For sales and growth table\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "\n",
     "# Specify the URL\n",
-    "#url = 'your-website-url'  # Replace with your actual URL\n",
-    "url = 'https://www.screener.in/company/havells/consolidated/'  # Replace with your actual URL\n",
+    "url = 'f\"https://www.screener.in/company/{symbol}/consolidated/'\n",
     "\n",
     "# Fetch the HTML content from the URL\n",
     "response = requests.get(url)\n",
@@ -505,6 +435,78 @@
     "\n",
     "df\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d2eb03-3f53-4534-9c36-9da76901daa7",
+   "metadata": {},
+   "source": [
+    "## FUNCTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d3012da-0bc0-4951-ade8-e28f30025688",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a87fd64-6593-4fab-b3c9-9a56cc6b0415",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f72975e-b9e0-4495-ae48-e12a9317eed7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d0b53d-82c5-4f96-8d0c-3bf750b1d7e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2478ecc5-7c74-43f5-a8ab-bce212dadbf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c101425f-5ac4-4a28-b31e-7c0bb48a1d28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "317dc893-edab-4b70-854b-2dd3354e06ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f411d8f-7078-4286-b2b2-c9b57e555e50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
